--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "preinstall": "typesync || :",
     "start": "react-scripts start",
     "build": "react-scripts build"
   },
@@ -37,5 +38,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/testing-library__jest-dom": "^5.14.1",
+    "typesync": "^0.8.0"
   }
 }
