--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@types/prettier": "^2.4.1",
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
+    "@types/webpack-dev-server": "^4.3.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "browser-sync": "^2.27.5",
     "core-js": "^3.18.2",
     "eslint": "^8.0.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-react": "^7.26.1",
     "eslint-webpack-plugin": "^3.0.1",
     "glslify-loader": "^2.0.0",
     "npm-run-all": "^4.1.5",
