--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
     "@babel/core": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-typescript": "^7.15.0",
+    "@linaria/webpack-loader": "^3.0.0-beta.13",
     "@types/babel__core": "^7.1.16",
     "@types/babel__preset-env": "^7.9.2",
     "@types/browser-sync": "^3001.0.28-alpha",
     "@types/core-js": "^2.5.5",
     "@types/eslint": "^7.28.1",
+    "@types/mini-css-extract-plugin": "^2.3.0",
     "@types/prettier": "^2.4.1",
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
@@ -16,11 +18,14 @@
     "babel-loader": "^8.2.2",
     "browser-sync": "^2.27.5",
     "core-js": "^3.18.2",
+    "css-loader": "^6.4.0",
     "eslint": "^8.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.26.1",
     "eslint-webpack-plugin": "^3.0.1",
     "glslify-loader": "^2.0.0",
+    "html-webpack-plugin": "^5.3.2",
+    "mini-css-extract-plugin": "^2.4.2",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.4.1",
     "regenerator-runtime": "^0.13.9",
@@ -35,13 +40,17 @@
   },
   "scripts": {
     "preinstall": "typesync ||:",
-    "dev": "webpack serve --mode=development",
+    "dev": "webpack-dev-server --mode development",
     "build": "webpack --mode production",
     "fix": "run-s fix:eslint fix:prettier",
     "fix:eslint": "eslint --fix",
     "fix:prettier": "prettier --write"
   },
   "dependencies": {
+    "@linaria/babel-preset": "^3.0.0-beta.13",
+    "@linaria/core": "^3.0.0-beta.13",
+    "@linaria/react": "^3.0.0-beta.13",
+    "@linaria/shaker": "^3.0.0-beta.13",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
