--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@linaria/react": "^3.0.0-beta.13",
     "@linaria/shaker": "^3.0.0-beta.13",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-markdown": "^7.0.1"
   }
 }
