--- a/package.json
+++ b/package.json
@@ -53,6 +53,8 @@
     "@linaria/shaker": "^3.0.0-beta.13",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-markdown": "^7.0.1"
+    "react-markdown": "^7.0.1",
+    "react-syntax-highlighter": "^15.4.4",
+    "remark-gfm": "^3.0.0"
   }
 }
