--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://ray-zero2.github.io/simple-markdown-editor",
   "devDependencies": {
     "@babel/core": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
@@ -13,6 +14,7 @@
     "@types/prettier": "^2.4.1",
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
+    "@types/react-syntax-highlighter": "^13.5.2",
     "@types/webpack-dev-server": "^4.3.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
@@ -23,6 +25,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-react": "^7.26.1",
     "eslint-webpack-plugin": "^3.0.1",
+    "gh-pages": "^3.2.3",
     "glslify-loader": "^2.0.0",
     "html-webpack-plugin": "^5.3.2",
     "mini-css-extract-plugin": "^2.4.2",
@@ -42,6 +45,8 @@
     "preinstall": "typesync ||:",
     "dev": "webpack-dev-server --mode development",
     "build": "webpack --mode production",
+    "deploy": "gh-pages -d dist",
+    "predeploy": "yarn build",
     "fix": "run-s fix:eslint fix:prettier",
     "fix:eslint": "eslint --fix",
     "fix:prettier": "prettier --write"
